# AoC2023

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
day01/: CMakeLists.txt  day01.cpp  day01.h  day01_main.cpp  day01_test.cpp
day02/: CMakeLists.txt  day02.cpp  day02_test.cpp  game.cpp  game.h
day03/: CMakeLists.txt  day03.cpp  day03_test.cpp  engine.cpp  engine.h
day04/: CMakeLists.txt  day04.cpp  day04_test.cpp  game.cpp  game.h
day05/: CMakeLists.txt  day05.cpp  day05_test.cpp
day06/: CMakeLists.txt  day06.cpp  day06_test.cpp  race.cpp  race.h
day07/: CMakeLists.txt  day07.cpp  day07_test.cpp  hand.cpp  hand.h
day08/: CMakeLists.txt  day08.cpp
day09/: CMakeLists.txt  day09.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.cpp
day14/: CMakeLists.txt  day14.cpp
day15/: CMakeLists.txt  day15.cpp
day16/: CMakeLists.txt  day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp  day18_2.cpp
day22/: CMakeLists.txt
day23/: day23.cpp
